--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       </nav>
       <div class="social-links">
         <a href="mailto:aadithpsaadi@gmail.com" target="_blank" class="gmail"><i class="bx bxl-google"></i></a>
-        <a href="https://https://www.linkedin.com/in/aadith-ps-776630226/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/aadith-suresh-776630226/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://github.com/Aadiac" target="_blank" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://instagram.com/aa__d__i?igshid=cHZxamg2NzB5ODd5" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://wa.me/qr/TN2HV224C32EB1" target="_blank" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
@@ -750,7 +750,7 @@
             <h3 style="color:#37c0e6;">Social Profiles</h3>
             <div class="social-links">
               <a href="mailto:aadithpsaadi@gmail.com" target="_blank" class="gmail"><i class="bx bxl-google"></i></a>
-              <a href="https://https://www.linkedin.com/in/aadith-ps-776630226/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/aadith-suresh-776630226/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               <a href="https://github.com/Aadiac" target="_blank" class="github"><i class="bx bxl-github"></i></a>
               <a href="https://instagram.com/aa__d__i?igshid=cHZxamg2NzB5ODd5" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
               <a href="https://wa.me/qr/TN2HV224C32EB1" target="_blank" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
